# vocaber

./: .gitignore  CMakeLists.txt  README.md  example.json  uninstall.sh
LICENSES/: nlohmann_MIT
assets/: question-mark.txt
examples/: cs_dictionary.json  example.json
examples/images/: info.txt
install/: vocaber.desktop
src/: App.cpp  App.h  FinishFrame.cpp  FinishFrame.h  LearnFrame.cpp  LearnFrame.h  MainFrame.cpp  MainFrame.h
src/classes/: Question.h
src/defines/: config_path.h
src/utilities/: get_json_from_file.cpp  get_json_from_file.h  load_questions_from_json.cpp  load_questions_from_json.h  scale_wx_bitmap.cpp  scale_wx_bitmap.h  validate_json_input.cpp  validate_json_input.h
